Fixed redundency in alignImages, remove function RemoveCss()

--- a/css/style.css
+++ b/css/style.css
@@ -120,4 +120,5 @@
 
 .qv-extension-picflip-back-title {
 	width:100%;
+		position: absolute;
 }
